--- a/src/sass/openeyes/ui/_training-mode.scss
+++ b/src/sass/openeyes/ui/_training-mode.scss
@@ -21,9 +21,7 @@
 		}
 
 		&:is(:hover, .active) {
-			svg.oe-openeyes {
-				fill: $_yellow;
-			}
+			background: none;
 		}
 	}
 
